# MileStone3

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  StandardIO.cpp  StandardIO.h  a.out  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  expectedOutput.txt  input.txt  main.cpp  minCircle.cpp  minCircle.h  testFile.csv  timeseries.cpp  timeseries.h  trainFile.csv
